--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -1,5 +1,41 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="help" class="workspace">
-	<h1>@Messages("application.title")</h1>
-	<p>ヘルプ</p>
+	<section>
+		<h1 class="alert alert-info">@Messages("application.title")にようこそ!</h1>
+		<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむ子をとができるアプリケーションです。</p>
+		<p>勉強会などで学習の補助ツールとして使うこともできますし、パーティ会場での純粋なクイズゲームとして楽しむこともできます。</p>
+	</section>
+	<section>
+		<h2 class="alert alert-info">出題者の使い方の流れ</h2>
+		<article>
+			<p>出題者となる人はまず最初に自分がクイズを出すためのルームを作成します。</p>
+			<p>ルーム名には「Java勉強会」「AKBのあれやこれや」など問題のテーマがわかる名前をつけてください。</p>
+		</article>
+		<article>
+			<p>ルームを作成したら次は問題を作成します。</p>
+			<p>問題は最大5択の選択問題で勉強会用途のために解説文や参考リンクを含めることができます。</p>
+		</article>
+		<article>
+			<p>問題がある程度たまったら回答者を集めてイベントを開催しましょう。</p>
+			<p>イベントでは参加者に対して問題を出題し、正解数に応じてランキングがつけられます。</p>
+		</article>
+		<article class="alert alert-warning">
+			<p>出題者と回答者が異なる場所にいてインターネット越しにクイズの出題／回答を行うこともできますが、このアプリの使い方としては実際に同じ部屋にいてパーティゲームの感覚で使う方が多分楽しいです。</p>
+		</article>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">回答者の使い方の流れ</h2>
+		<article>
+			<p>回答者はまず出題者の主催するルームに入室します。</p>
+			<p>ルーム内では同じルームにいる人とチャットをすることができます。</p>
+		</article>
+		<article>
+			<p>出題者がイベントを開始すると参加するかどうかの選択ダイアログが表示されるので参加してください。</p>
+			<p>以降、出題者がクイズを出題するとリアルタイムにそれが自分の端末に流れてくるので、それに回答してください。回答時間は10秒です。</p>
+		</article>
+		<article class="alert alert-warning">
+			<p>通信環境によっては端末によって出題されるタイミングがずれることがあります。その場合でも回答時間は問題が画面に表示されたタイミングからカウントされます。</p>
+			<p>問題出題時に端末がスリープしていたり、ブラウザを開いていなかったりした場合、その問題に回答することができませんが、それもゲームの一部としてお楽しみください。</p>
+		</article>
+	</secition>
 </div>
