--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -1,6 +1,6 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="publish-question" class="workspace">
-	<nav class="paging-bar" style="display:none;">
+	<nav id="publish-q-back" class="paging-bar" style="display:none;">
 		<ul>
 			<li>
 				<div class="pull-left">
