--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -78,7 +78,7 @@
 				<label>@Messages("capacity")</label>
 				<p id="room-detail-capacity" class="indent"></p>
 				<label>@Messages("description")</label>
-				<pre id="room-detail-description2 pre-break-word" class="indent"></pre>
+				<pre id="room-detail-description2" class="pre-break-word indent"></pre>
 			</div>
 		</div>
 	</div>
