--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -38,4 +38,31 @@
 			<p>問題出題時に端末がスリープしていたり、ブラウザを開いていなかったりした場合、その問題に回答することができませんが、それもゲームの一部としてお楽しみください。</p>
 		</article>
 	</secition>
+	<section>
+		<h2 class="alert alert-info">画面構成</h2>
+		<article>ToDo スナップショットx2 画面内に番号を振る</article>
+		<ol>
+			<li>クリックするとサイドメニューが表示されます。</li>
+			<li>ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
+			<li>サイドメニュー。ほとんどの機能はここから実行します。</li>
+			<li>ボトムバー。ルームに入室した際に表示される良く使う機能へのショートカットです。</li>
+		</ol>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">サインイン</h2>
+		<article>
+			<p>このアプリケーションを使用するためにはTwitterアカウントが必要です。</p>
+			<p>トップページの
+				<a class="btn btn-twitter" href="javascript:void(0)">
+					<i class="fa fa-twitter fa-2x"></i>
+					@Messages("loginWithTwitter")
+				</a>
+				をクリックしてサインインしてください。
+			</p>
+		</article>
+		<article class="alert alert-warning">
+			<p>本アプリケーションが利用するTwitterの</p>
+			<p>問題出題時に端末がスリープしていたり、ブラウザを開いていなかったりした場合、その問題に回答することができませんが、それもゲームの一部としてお楽しみください。</p>
+		</article>
+	</secition>
 </div>
