Add enter button in table of index page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,6 +22,7 @@
 						<th class="event-date">@Messages("scheduledDate")</th>
 						<th class="event-title">@Messages("title")</th>
 						<th class="event-capacity">@Messages("capacity")</th>
+						<th class="event-enter">@Messages("ui.enter")</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -35,6 +36,7 @@
 						<th class="event-date">@Messages("datetime")</th>
 						<th class="event-title">@Messages("title")</th>
 						<th class="event-capacity">@Messages("capacity")</th>
+						<th class="event-enter">@Messages("ui.enter")</th>
 					</tr>
 				</thead>
 				<tbody>
