--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -61,8 +61,39 @@
 			</p>
 		</article>
 		<article class="alert alert-warning">
-			<p>本アプリケーションが利用するTwitterの</p>
-			<p>問題出題時に端末がスリープしていたり、ブラウザを開いていなかったりした場合、その問題に回答することができませんが、それもゲームの一部としてお楽しみください。</p>
+			<p>本アプリケーションが利用するTwitterの機能は以下です。</p>
+			<ul>
+				<li>ユーザー認証</li>
+				<li>アイコンの表示</li>
+				<li>チャットでの発言を同時にTwitterにも流す(任意)</li>
+			</ul>
 		</article>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">ホーム</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">ルームの作成／編集</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">問題の作成</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">イベントの編集</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">問題の出題と解答</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">ランキング</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">マイページ</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">チャット</h2>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">ユーザー設定</h2>
 	</secition>
 </div>
