--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -68,19 +68,19 @@
 				</label>
 			</div>
 			<div>
-				<label>@Messages("description")</label>
-				<pre id="room-detail-description" class="pre-break-word"></pre>
+				<label>@Messages("description")：</label>
+				<pre id="room-detail-description" class="pre-break-word event-detail-info"></pre>
 			</div>
 			<div id="room-detail-event">
 				<h3>@Messages("nextEventInformation")</h3>
-				<label>@Messages("title")</label>
-				<p id="room-detail-title" class="indent"></p>
-				<label>@Messages("scheduledDate")</label>
-				<p id="room-detail-date" class="indent"></p>
-				<label>@Messages("capacity")</label>
-				<p id="room-detail-capacity" class="indent"></p>
-				<label>@Messages("description")</label>
-				<pre id="room-detail-description2" class="pre-break-word indent"></pre>
+				<label>@Messages("title")：</label>
+				<p id="room-detail-title" class="event-detail-info"></p>
+				<label>@Messages("scheduledDate")：</label>
+				<p id="room-detail-date" class="event-detail-info"></p>
+				<label>@Messages("capacity")：</label>
+				<p id="room-detail-capacity" class="event-detail-info"></p>
+				<label>@Messages("description")：</label>
+				<pre id="room-detail-description2" class="pre-break-word event-detail-info"></pre>
 			</div>
 		</div>
 	</div>
