--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -78,7 +78,7 @@
 			<li><a href="#make-room" class="dynamic">@Messages("ui.makeRoom")</a></li>
 		}
 		@roomInfo.map { room =>
-			<li><span>@Messages("roomMenu")</span>
+			<li>@Messages("roomMenu")
 				<ul>
 					<li><a href="#publish-question" class="dynamic">@Messages("questions")</a></li>
 					<li><a href="#ranking" class="dynamic">@Messages("ranking")</a></li>
@@ -89,7 +89,7 @@
 				</ul>
 			</li>
 			@userInfo.filter(u => room.isAdmin(u.id)).map { user =>
-				<li><span>@Messages("manageRoom")</span>
+				<li>@Messages("manageRoom")
 					<ul>
 						<li><a href="#edit-room" class="dynamic">@Messages("ui.editRoom")</a></li>
 						<li><a href="#edit-event" class="dynamic">@Messages("editEvent")</a></li>
