--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -42,10 +42,10 @@
 		<h2 class="alert alert-info">画面構成</h2>
 		<article>ToDo スナップショットx2 画面内に番号を振る</article>
 		<ol>
-			<li>クリックするとサイドメニューが表示されます。</li>
-			<li>ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
+			<li>メニューボタン。クリックするとサイドメニューが表示されます。</li>
+			<li>ユーザーメニュー。ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
 			<li>サイドメニュー。ほとんどの機能はここから実行します。</li>
-			<li>ボトムバー。ルームに入室した際に表示される良く使う機能へのショートカットです。</li>
+			<li>ショートカットバー。ルームに入室した際に表示される良く使う機能へのショートカットです。</li>
 		</ol>
 	</secition>
 	<section>
@@ -71,15 +71,201 @@
 	</secition>
 	<section>
 		<h2 class="alert alert-info">ホーム</h2>
+		<article>
+			<p>トップページです。またはサイドメニューの「ホーム」を選択することで表示されます。</p>
+			<p>ルームの一覧が表示されます。</p>
+			<dl>
+				<dt>近日開催</dt>
+				<dd>現在イベントを開催しているルームとイベント開催予定日の近いルームから順にリストされます。</dd>
+
+				<dt>参加イベント</dt>
+				<dd>過去にイベントに参加したルームと自分の主催するルームがリストされます。</dd>
+			</dl>
+			<p>各行をクリックすることでルームとイベントの詳細情報を確認できます。</p>
+			<p>入室ボタンをクリックすることでそのルームに入室することができます。</p>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">ルームの作成／編集</h2>
+		<article>
+			<p>サイドメニューの「ルームの作成」を選択することでルーム作成画面が表示されます。</p>
+		</article>
+		<table class="table">
+			<tr>
+				<th>ルーム名</th>
+				<td>ルームの名前を指定します。唯一の必須項目です。</td>
+			</tr>
+			<tr>
+				<th>参加者の問題投稿を許可</th>
+				<td>チェックすると自分以外のユーザーが問題を投稿できるようになります。</td>
+			</tr>
+			<tr>
+				<th>タグ</th>
+				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索に使う予定です。)</td>
+			</tr>
+			<tr>
+				<th>ハッシュタグ</th>
+				<td>チャットに付加されるハッシュタグを指定します。</td>
+			</tr>
+			<tr>
+				<th>説明</th>
+				<td>任意の説明を記述します。</td>
+			</tr>
+		</table>
+		<article>
+			<p>ルームの設定内容はサイドメニューの「ルームの編集」からいつでも変更できます。</p>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">問題の作成</h2>
+		<article>
+			<p>サイドメニューの「問題の編集／出題」を選択することで問題一覧画面が表示されます。</p>
+			<p>または画面下のショートカットバーからもこの画面を開くことができます。</p>
+			<dl>
+				<dt>ストック</dt>
+				<dd>
+					<p>まだ一度も出題したことがない問題の一覧です。</p>
+					<p>各行をクリックすることで詳細画面に遷移し内容を変更することができます。</p>
+					<p>またイベント開催時には一覧からショートカット的に問題を出題できます。(詳細画面からも出題はできます。)</p>
+				</dd>
+
+				<dt>出題済み</dt>
+				<dd>
+					<p>過去に出題した問題の一覧です。</p>
+					<p>各行をクリックすることで詳細画面に遷移しますが内容を変更することはできません。</p>
+					<p>一覧にはこれまでの出題回数と累計正答者数が表示されます。</p>
+					<p>出題済みの問題であってもイベントが変われば詳細画面から何度でも出題することができます。</p>
+				</dd>
+
+				<dt>新規作成</dt>
+				<dd>
+					<p>問題作成画面に遷移します。</p>
+				</dd>
+			</dl>
+		</article>
+		<table class="table">
+			<tr>
+				<th>問題</th>
+				<td>問題文を記述します。</td>
+			</tr>
+			<tr>
+				<th>選択肢</th>
+				<td>
+					<p>回答の選択肢を記述します。</p>
+					<p>改行区切りで最大5つまで指定できます。</p>
+				</td>
+			</tr>
+			<tr>
+				<th>正解</th>
+				<td>
+					<p>問題の正解がどれであるかの設定です。</p>
+					<ul>
+						<li>先頭行 - 選択肢の先頭行が正解になります。</li>
+						<li>最も多かった回答 - 回答者の一番多かった選択肢が正解となります。</li>
+						<li>最も少なかった回答 - 回答者の一番少なかった選択肢がが正解となります。(0は除く)</li>
+						<li>正解なし - アンケートのような正解のない問題を出す場合に使用します。</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>タグ</th>
+				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索に使う予定です。)</td>
+			</tr>
+			<tr>
+				<th>説明</th>
+				<td>任意の説明を記述します。</td>
+			</tr>
+			<tr>
+				<th>参考リンク</th>
+				<td>問題の解説として参考になるサイトがあるならそのURLを指定します。</td>
+			</tr>
+		</table>
+		<article class="alert alert-warning">
+			<p>イベント参加者はマイページから自分の参加したイベントの問題を振り返ることができるので、勉強会目的の場合は説明、参考リンクを設定しておくことで学習の助けとなります。</p>
+		</article>
+		<h3>問題の出題</h3>
+		<article>
+			<p>イベント開催時にはこの画面から問題を出題することができます。</p>
+		</article>
+		<table class="table">
+			<tr>
+				<th>ランキングに含める</th>
+				<td>チェックを外すと問題に正解してもランキング集計の対象外となります。</td>
+			</tr>
+		</table>
+		<article class="alert alert-warning">
+			<ul>
+				<li>正解なしの問題はランキングに含めることはできません。</li>
+				<li>先頭行が正解の問題は出題時に選択肢がシャッフルされます。</li>
+				<li>それ以外の問題は指定の順で選択肢が表示されます。</li>
+			</ul>
+		</article>
+		<h3>問題の投稿</h3>
+		<article>
+			<p>ルームの設定で参加者の問題投稿が許可されている場合は誰でも問題を作成することができます。</p>
+			<p>ただし、問題の投稿後はその問題は主催者に委ねられるので問題を修正することはできません。</p>
+			<p>主催者は投稿された問題を自由に修正することができます。</p>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">イベントの編集</h2>
+		<article>
+			<p>サイドメニューの「イベントの編集」を選択することでイベントの編集、開始、終了を行う画面が表示されます。</p>
+			<p>イベントが開始されていない場合はイベント内容の入力フォームが表示され、その修正とイベントの開始を行うことができます。</p>
+			<p>イベントが開始されている場合は参加者一覧が表示されイベントの終了を行うことができます。</p>
+		</article>
+		<table class="table">
+			<tr>
+				<th>定員</th>
+				<td>イベントに参加できる人数を設定します。現在は最大50人に制限されています。</td>
+			</tr>
+			<tr>
+				<th>タイトル</th>
+				<td>任意のイベントタイトルを指定します。</td>
+			</tr>
+			<tr>
+				<th>開始日</th>
+				<td>イベントの開始予定日を指定します。</td>
+			</tr>
+			<tr>
+				<th>開始時刻</th>
+				<td>イベントの開始予定時刻を指定します。</td>
+			</tr>
+			<tr>
+				<th>パスコード</th>
+				<td>
+					<p>指定するとイベント参加時にパスコードの入力を求められるようになります。</p>
+					<p>(つまりパスコードを知っている人しかイベントに参加できなくなります。)</p>
+				</td>
+			</tr>
+			<tr>
+				<th>説明</th>
+				<td>任意の説明を記述します。</td>
+			</tr>
+		</table>
+		<article class="alert alert-warning">
+			<ul>
+				<li>イベントの設定項目に必須項目はありません。この画面の表示後に何も入力せずにすぐにイベントを開始することができます。</li>
+				<li>開始日、開始時刻を設定してもその時間に自動的にイベントが開始されるわけではありません。イベントの開始はあくまで主催者が手動で行います。これらの項目は近日開催のイベント一覧の検索のためにのみ使用されます。</li>
+				<li>24時間以上問題が出題されていないイベントは自動的に終了します。</li>
+				<li>過去のイベント情報の変更はできません。</li>
+			</ul>
+		</article>
+	</secition>
+	<section>
+		<h2 class="alert alert-info">イベントへの参加</h2>
+		<article>
+			<p>主催者でないユーザーがルーム内にいる時にイベントが開始されるとイベントへの参加を問い合わせるパネルが表示されます。</p>
+			<p>ここで「参加」をクリックするとイベントに参加できます。</p>
+		</article>
+		<article class="alert alert-warning">
+			<ul>
+				<li>イベント参加のパネルで「参加しない」を選択した場合でも、後から画面右上のユーザーメニューから参加することができます。</li>
+				<li>イベントへの参加は先着順です。定員に達した場合はそれ以降のイベント参加は受け付けられなくなります。</li>
+				<li>一度参加したイベントのキャンセルはできません。参加後一問も回答せずに退室(ブラウザ終了)した場合でも参加扱いとなります。(定員にカウントされます。)</li>
+				<li>イベントに参加していない状態でもルーム内にいれば問題を見ることはできますが回答はできません。</li>
+			</ul>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">問題の出題と解答</h2>
