--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -434,6 +434,12 @@ th.correctCount         { text-align: right; }
 
 .in-session             { color: #ff3c2d; }
 
+.help ol { list-style: decimal;margin: 10px 30px;}
+.help ul { list-style: disc;margin: 10px 30px;}
+
+.help dl { margin: 10px;}
+.help dt { margin-top: 10px; font-weight: bold;}
+.help dd { margin-top: 10px;}
 
 /* jQuery UI
 -----------------------------------------------------------------------------*/
