--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -1,5 +1,5 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
-<div id="help" class="workspace">
+<div id="help" class="workspace help">
 	<section>
 		<h1 class="alert alert-info">@Messages("application.title")にようこそ!</h1>
 		<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむ子をとができるアプリケーションです。</p>
@@ -101,7 +101,7 @@
 			</tr>
 			<tr>
 				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索に使う予定です。)</td>
+				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
 			</tr>
 			<tr>
 				<th>ハッシュタグ</th>
@@ -169,7 +169,7 @@
 			</tr>
 			<tr>
 				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索に使う予定です。)</td>
+				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
 			</tr>
 			<tr>
 				<th>説明</th>
@@ -268,18 +268,98 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">問題の出題と解答</h2>
+		<h2 class="alert alert-info">問題の解答</h2>
+		<article>
+			<p>主催者が問題を出題するとすぐに参加者の端末で問題が表示されます。正解と思うボタンをクリックしてください。制限時間は10秒です。</p>
+			<p>解答後は選択肢ごとの人数がボタン上に表示され、10秒後には正解と問題の解説が表示されます。</p>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">ランキング</h2>
+		<article>
+			<p>サイドメニューの「ランキング」またはショートカットバーからランキング画面を開くことができます。</p>
+			<dl>
+				<dt>Now!</dt>
+				<dd>
+					<p>現在開催中のイベントのランキング。一問毎に順位が入れ替わります。</p>
+					<p>(イベント開催中以外は表示されません。)</p>
+				</dd>
+
+				<dt>イベント別</dt>
+				<dd>過去のイベントの優勝者一覧。行をクリックすることでそのイベントのランキングが表示されます。</dd>
+
+				<dt>通算</dt>
+				<dd>イベントを通しての通算ランキング。行をクリックすることでその人の各イベントでの成績が表示されます。</dd>
+			</dl>
+			<p>イベントランキングの算出方法は以下です。</p>
+			<ol>
+				<li>正答数の多い順</li>
+				<li>正答数が同じ場合は、正答した問題の解答にかかったタイムの短い順</li>
+			</ol>
+			<p>イベント終了時にイベントランキングの上位10人にはそれぞれ10ポイントから1ポイントまでのポイントが加算されます。</p>
+			<p>それを踏まえて通算ランキングの算出方法は以下です。</p>
+			<ol>
+				<li>ポイントの多い順</li>
+				<li>ポイントが同じ場合は、正答数の多い順</li>
+				<li>ポイント、正答数が同じ場合は、正答した問題の解答にかかったタイムの短い順</li>
+			</ol>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">マイページ</h2>
+		<article>
+			<p>サイドメニューの「マイページ」を選択することでマイページ画面を開くことができます。</p>
+			<p>マイページでは自分の参加したイベントまたは主催したイベントの問題を振りかえることができます。</p>
+			<dl>
+				<dt>参加ルーム</dt>
+				<dd>
+					<p>イベントに参加したことのあるルームの一覧です。</p>
+					<p>各行をクリックすることで、以下の画面にブレイクダウンしていきます。</p>
+					<ul>
+						<li>そのルームで参加したイベントの一覧と総合順位</li>
+						<li>イベントで出題された問題一覧</li>
+						<li>出題された問題とその解説</li>
+					</ul>
+				</dd>
+
+				<dt>主催ルーム</dt>
+				<dd>
+					<p>自分の主催するルームの一覧です。</p>
+					<p>各行をクリックすることで、以下の画面にブレイクダウンしていきます。</p>
+					<ul>
+						<li>開催したイベントの一覧と参加人数</li>
+						<li>イベントで出題された問題一覧</li>
+						<li>出題された問題とその解説</li>
+					</ul>
+				</dd>
+			</dl>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">チャット</h2>
+		<article>
+			<p>サイドメニューの「チャット」またはショートカットバーからチャット画面を開くことができます。</p>
+			<p>オプションでここでの発言内容を同時にTwitterに投稿することもできます。</p>
+		</article>
+		<article class="alert alert-warning">
+			<p>チャットの内容はどこにも保存されておらず、画面をリロードするだけでも過去の発言は見えなくなります。</p>
+			<p>本格的なコミュニケーション手段というよりもTwitter感覚でお使いください。</p>
+		</article>
 	</secition>
 	<section>
 		<h2 class="alert alert-info">ユーザー設定</h2>
+		<article>
+			<p>ユーザーメニューの「設定」をクリックすることでユーザー設定画面を開くことができます。</p>
+		</article>
+		<table class="table">
+			<tr>
+				<th>ユーザー名</th>
+				<td>ユーザー名を変更します。</td>
+			</tr>
+			<tr>
+				<th>チャットメッセージを通知する</th>
+				<td>チェックするとチャットに発言があった時にポップアップで通知されます。</td>
+			</tr>
+		</table>
 	</secition>
 </div>
