enter-button width

--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -383,9 +383,10 @@ td.chat-img             { width: 28px; }
 td.chat-left            { margin-left: 10px; text-align: left; }
 td.chat-right           { margin-right: 10px; text-align: right; }
 #chat-text-len          { font-style: italic; }
-th.event-date           { width: 25%; }
+th.event-date           { width: 20%; }
 th.event-title          { width: auto; }
-th.event-capacity       { width: 20%; }
+th.event-capacity       { width: 15%; }
+th.event-enter          { width: 19%; }
 th.q-creator            { width: 30% }
 th.q-publish            { width: 20%; }
 td.q-publish            { text-align: right; }
