--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -33,18 +33,18 @@
 		</div>
 
 		<div id="mypage-events" class="tab-pane" style="display:none;">
-            <nav class="paging-bar">
-			    <ul>
-				    <li>
-                        <div class="pull-left">
-                            <button id="mypage-events-back" type="button" class="btn">
-                                <i class="fa fa-angle-left fa-lg"></i>
-                            </button>
-                        </div>
-                    </li>
-                    <li></li>
-                </ul>
-            </nav>
+			<nav class="paging-bar">
+				<ul>
+					<li>
+						<div class="pull-left">
+							<button id="mypage-events-back" type="button" class="btn">
+								<i class="fa fa-angle-left fa-lg"></i>
+							</button>
+						</div>
+					</li>
+					<li></li>
+				</ul>
+			</nav>
 			<h3 id="mypage-events-roomName"></h3>
 			<p class="mypage-totalranking">@Messages("totalRanking"): <span id="mypage-events-total">-</span></p>
 			<table class="table table-hover">
@@ -59,19 +59,45 @@
 				</tbody>
 			</table>
 		</div>
+		<div id="mypage-owners-events" class="tab-pane" style="display:none;">
+			<nav class="paging-bar">
+				<ul>
+					<li>
+						<div class="pull-left">
+							<button id="mypage-owners-events-back" type="button" class="btn">
+								<i class="fa fa-angle-left fa-lg"></i>
+							</button>
+						</div>
+					</li>
+					<li></li>
+				</ul>
+			</nav>
+			<h3 id="mypage-owners-events-roomName"></h3>
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th class="r-title">@Messages("title")</th>
+						<th class="r-member">@Messages("memberCount")</th>
+						<th class="r-publish">@Messages("publishCount")</th>
+					</tr>
+				</thead>
+				<tbody class="row-link">
+				</tbody>
+			</table>
+		</div>
 		<div id="mypage-questions" class="tab-pane" style="display:none;">
-            <nav class="paging-bar">
-			    <ul>
-				    <li>
-                        <div class="pull-left">
-                            <button id="mypage-questions-back" type="button" class="btn">
-                                <i class="fa fa-angle-left fa-lg"></i>
-                            </button>
-                        </div>
-                    </li>
-                    <li></li>
-                </ul>
-            </nav>
+			<nav class="paging-bar">
+				<ul>
+					<li>
+						<div class="pull-left">
+							<button id="mypage-questions-back" type="button" class="btn">
+								<i class="fa fa-angle-left fa-lg"></i>
+							</button>
+						</div>
+					</li>
+					<li></li>
+				</ul>
+			</nav>
 			<table class="table table-hover">
 				<thead>
 					<tr>
