--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -424,14 +424,9 @@ td.event-title,
 .row-link tr            { cursor: pointer; }
 .entry-event            { display: none; }
 
-tr:nth-child(odd).q-published th,
-tr:nth-child(odd).q-published td { background: #e9e9e9; }
-tr:nth-child(even).q-published th,
-tr:nth-child(even).q-published td { background: #e6e6e6; }
-
 th.correctCount         { text-align: right; }
 
-.table-striped tr.q-published td { color: #fff; background: #5bc0de !important; }
+tr.q-published td { color: #fff; background: #5bc0de !important; }
 
 .in-session             { color: #ff3c2d; }
 
