--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -12,7 +12,7 @@
 		</ul>
 	</nav>
 	<div id="publish-q-default">
-		<div class="progress" id="publish-q-progress">
+		<div class="progress">
 			<div id="publish-q-progress" class="progress-bar progress-bar-success" role="progressbar" style="width: 100%">
 			</div>
 			<div id="publish-q-progress-answered" class="progress-bar progress-bar-info" role="progressbar" style="width: 0%">
