Implement copy question

--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -133,6 +133,7 @@
 				<dd>
 					<p>過去に出題した問題の一覧です。</p>
 					<p>各行をクリックすることで詳細画面に遷移しますが内容を変更することはできません。</p>
+					<p>(問題をコピーして新しい問題として登録することはできます。)</p>
 					<p>一覧にはこれまでの出題回数と累計正答者数が表示されます。</p>
 					<p>出題済みの問題であってもイベントが変われば詳細画面から何度でも出題することができます。</p>
 				</dd>
