Add error message for the browser that isn't support WebSocket

--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -2,8 +2,15 @@
 <div id="help" class="workspace help">
 	<section>
 		<h1 class="alert alert-info">@Messages("application.title")にようこそ!</h1>
-		<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむ子をとができるアプリケーションです。</p>
-		<p>勉強会などで学習の補助ツールとして使うこともできますし、パーティ会場での純粋なクイズゲームとして楽しむこともできます。</p>
+		<article>
+			<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむ子をとができるアプリケーションです。</p>
+			<p>勉強会などで学習の補助ツールとして使うこともできますし、パーティ会場での純粋なクイズゲームとして楽しむこともできます。</p>
+		</article>
+		<article class="alert alert-danger">
+			<p>@Messages("application.title")は最新のWebテクノロジー(WebSocket, SessionStorage, PushState等)を使用して作成されたアプリケーションです。</p>
+			<p>ご利用の際には最新のモダンブラウザをご使用ください。</p>
+			<p><em>IE9以前、Android4.3以前の標準ブラウザでは動作しません。</em></p>
+		</article>
 	</section>
 	<section>
 		<h2 class="alert alert-info">出題者の使い方の流れ</h2>
