--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -48,7 +48,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button type="button" class="btn" id="room-detail-back">
+							<button type="button" class="btn back-btn" id="room-detail-back">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
