--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -37,7 +37,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button id="mypage-events-back" type="button" class="btn">
+							<button id="mypage-events-back" type="button" class="btn back-btn">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
@@ -64,7 +64,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button id="mypage-owners-events-back" type="button" class="btn">
+							<button id="mypage-owners-events-back" type="button" class="btn back-btn">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
@@ -90,7 +90,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button id="mypage-questions-back" type="button" class="btn">
+							<button id="mypage-questions-back" type="button" class="btn back-btn">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
