--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -4,7 +4,7 @@
 		<ul>
 			<li>
 				<div class="pull-left">
-					<button type="button" class="btn" id="publish-q-back-btn">
+					<button type="button" class="btn back-btn" id="publish-q-back-btn">
 						<i class="fa fa-angle-left fa-lg"></i>
 					</button>
 				</div>
