--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -53,7 +53,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button type="button" class="btn" id="ranking-event-detail-back">
+							<button type="button" class="btn back-btn" id="ranking-event-detail-back">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
@@ -78,7 +78,7 @@
 				<ul>
 					<li>
 						<div class="pull-left">
-							<button type="button" class="btn" id="ranking-user-back">
+							<button type="button" class="btn back-btn" id="ranking-user-back">
 								<i class="fa fa-angle-left fa-lg"></i>
 							</button>
 						</div>
